--- a/index.html
+++ b/index.html
@@ -61,16 +61,31 @@
       <a href="#">Careers</a>
     </div>
   </header>
-  Next generation digital banking
 
-  Take your financial life online. Your Easybank account will be a one-stop-shop
-  for spending, saving, budgeting, investing, and much more.
+  <section class="hero">
+    <div class="hero__image"></div>
 
-  Request Invite
+    <div class="hero__text">
+      <h1>
+        Next generation digital banking
+      </h1>
+      <p>
+        Take your financial life online. Your Easybank account will be a one-stop-shop for spending, saving, budgeting, investing, and much more.
+      </p>
+      <button type="button" class="button">Request Invite</button>
+
+    </div>
+  </section>
+
+  <section class="choices">
+    <h2>
+      Why choose Easybank?
+    </h2>
+  </section>
 
 
 
-  Why choose Easybank?
+
 
   We leverage Open Banking to turn your bank account into your financial hub. Control
   your finances like never before.
