--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link href="https://fonts.googleapis.com/css2?family=Public+Sans:wght@300;400;700&display=swap" rel="stylesheet">
-  <title>Frontend Mentor | Easybank landing page</title>
+  <title>Easybank landing page | Frontend Mentor</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <link rel="stylesheet" href="scss/style.css">
+  <link rel="stylesheet" href="./app/scss/style.css">
   <style>
     .attribution {
       font-size: 11px;
@@ -150,7 +150,7 @@
   <main>
 
   </main>
-  <script src="/js/script.js"></script>
+  <script src="./app/js/script.js"></script>
 </body>
 
 </html>
